--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,18 +1,36 @@
-name: Docker Image CI
+name: 构建和推送 Docker 镜像
 
+#当您的项目有更新时触发此 workflow
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    branches:
+      - master
 
 jobs:
-
-  build:
-
+  build-and-push:
+    name: 构建和推送 Docker 镜像
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag nali-api:$(date +%s)
+      # checkout 您的代码
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      # 登录到 Docker registry（Docker Hub）
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # 构建 Docker 镜像
+      - name: Build Docker Image
+        run: |
+          docker build -t reallester/nali-api:latest .
+          docker build -t reallester/nali-api:$(date +"%Y-%m-%d") .
+
+      # 推送 Docker 镜像
+      - name: Push Docker Image
+        run: |
+          docker push reallester/nali-api:latest
+          docker push reallester/nali-api:$(date +"%Y-%m-%d")
